# prize_pool_contract

./: .gitignore  Anchor.toml  README.md  check.rs  package-lock.json  package.json
programs/check_creator/: Cargo.toml
programs/prize_pool_contract/: Cargo.toml
programs/prize_pool_contract/src/: lib.rs
tests/: prize_pool_contract.js
