[package]
name = "check_creator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "check_creator"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.12.0"
anchor-spl = "0.13.2"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}